Added some additional argLine values