@@ -161,6 +161,12 @@
                             --add-opens=java.base/sun.nio=ALL-UNNAMED
                             --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
                             --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+                            --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED
+                            --add-opens=java.base/java.util.regex=ALL-UNNAMED
+                            --add-exports=java.security.jgss/sun.security.jgss=ALL-UNNAMED
+                            --add-exports=java.security.jgss/sun.security.jgss.spi=ALL-UNNAMED
+                            --add-exports=java.security.jgss/sun.security.krb5.internal=ALL-UNNAMED
+                            --add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED
                         </argLine>
                     </configuration>
                 </plugin>
